add example notebook

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ layermeshes/
 !cortical_layers/smooth_minnie65_full_prediction.json
 !cortical_layers/minnie65_full_prediction.json
 !requirements.txt
+!features_by_depth.png
 .idea
 
 # Byte-compiled / optimized / DLL files
